# PunkVAE

./: .gitignore  README.md
app/: app.py  pyproject.toml
model/: punkvae_train.ipynb  pyproject.toml
